Set the nav bar fixed

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <body class="bg-gray-400">
     <noscript>This site runs best with JavaScript enabled.</noscript>
 
-    <header class="text-gray-500 bg-blue-800">
-      <div
-        class="container flex items-center justify-between py-5 text-base lg:py-14"
-      >
+    <header
+      class="sticky top-0 px-4 mx-auto text-gray-500 bg-white sm:flex sm:items-center sm:justify-between"
+    >
+      <div class="flex items-center justify-between py-5 text-base lg:py-14">
         <div class="flex items-center">
           <div class="mr-2 lg:mr-4">
             <img
@@ -64,32 +64,29 @@
             </svg>
           </button>
         </div>
-
-        <nav
-          class="px-2 pt-2 pb-3 nav is-closed sm:flex sm:items-center sm:content-center"
-        >
-          <a
-            class="block px-2 py-1 mt-1 text-lg tracking-wide text-gray-900 uppercase sm:text-sm lg:text-xl spaced-x-6 hover:bg-gray-200 sm:py-0 sm:ml-2"
-            href="#about"
-            >About</a
-          >
-          <a
-            class="block px-2 py-1 mt-1 text-lg tracking-wide text-gray-900 uppercase sm:text-sm lg:text-xl spaced-x-6 hover:bg-gray-200 sm:py-0 sm:ml-2"
-            href="#projects"
-            >Projects</a
-          >
-          <a
-            class="block px-2 py-1 mt-1 text-lg tracking-wide text-gray-900 uppercase sm:text-sm lg:text-xl spaced-x-6 hover:bg-gray-200 sm:py-0 sm:ml-2"
-            href="#education"
-            >Education</a
-          >
-          <a
-            class="block px-2 py-1 mt-1 text-lg tracking-wide text-gray-900 uppercase sm:text-sm lg:text-xl spaced-x-6 hover:bg-gray-200 sm:py-0 sm:ml-2"
-            href="#contact"
-            >Contact</a
-          >
-        </nav>
       </div>
+      <nav class="pt-2 pb-3 pl-8 nav is-closed sm:flex">
+        <a
+          class="block px-2 py-1 mt-1 text-lg tracking-wide text-gray-900 uppercase rounded sm:text-sm lg:text-xl spaced-x-6 hover:bg-gray-200 sm:py-0 sm:m-0 sm:ml-2"
+          href="#about"
+          >About</a
+        >
+        <a
+          class="block px-2 py-1 mt-1 text-lg tracking-wide text-gray-900 uppercase rounded sm:text-sm lg:text-xl spaced-x-6 hover:bg-gray-200 sm:py-0 sm:m-0 sm:ml-2"
+          href="#projects"
+          >Projects</a
+        >
+        <a
+          class="block px-2 py-1 mt-1 text-lg tracking-wide text-gray-900 uppercase rounded sm:text-sm lg:text-xl spaced-x-6 hover:bg-gray-200 sm:py-0 sm:m-0 sm:ml-2"
+          href="#education"
+          >Education</a
+        >
+        <a
+          class="block px-2 py-1 mt-1 text-lg tracking-wide text-gray-900 uppercase rounded sm:text-sm lg:text-xl spaced-x-6 hover:bg-gray-200 sm:py-0 sm:m-0 sm:ml-2"
+          href="#contact"
+          >Contact</a
+        >
+      </nav>
     </header>
 
     <section id="wellcome" class="">
