About mobile first

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
     ></script>
   </head>
-  <body class="bg-gray-400">
+  <body class="bg-gray-100">
     <noscript>This site runs best with JavaScript enabled.</noscript>
 
     <header
@@ -89,81 +89,76 @@
       </nav>
     </header>
 
-    <section id="wellcome" class="">
-      <div class="container text-center sm:py-20 md:py-24 xl:py-32">
-        <p class="mb-2 text-lg font-light tracking-widest sm:text-2xl">
-          Hi
-        </p>
-        <p class="mb-2 text-lg font-light tracking-widest sm:text-2xl">
-          Welcome
-        </p>
-        <h1 class="mb-2 text-xl font-semibold sm:text-3xl">
-          I'm Yampier Medina
-        </h1>
-        <h2 class="mb-3 text-2xl font-bold tracking-wide sm:text-5xl">
-          A Software Engineer
-        </h2>
-        <p class="mb-2 text-lg leading-8 sm:text-xl">
-          I like AWS serverless computing, React, GraphQL and ES Next.
-        </p>
-        <p class="mb-2 text-xl font-semibold leading-8 sm:text-xl">
-          Job status
-        </p>
-        <p class="mb-4 text-lg leading-8 sm:text-xl">
-          Searching, 100% Remote
-        </p>
+    <section id="wellcome" class="bg-gray-200">
+      <div class="flex pt-24 pb-32">
+        <div class="container text-center sm:py-20 md:py-24 xl:py-32">
+          <p class="mb-2 text-lg font-light tracking-widest sm:text-2xl">
+            Hi
+          </p>
+          <p class="mb-2 text-lg font-light tracking-widest sm:text-2xl">
+            Welcome
+          </p>
+          <h1 class="mb-2 text-xl font-semibold sm:text-3xl">
+            I'm Yampier Medina
+          </h1>
+          <h2 class="mb-3 text-2xl font-bold tracking-wide sm:text-5xl">
+            A Software Engineer
+          </h2>
+          <p class="mb-2 text-lg leading-8 sm:text-xl">
+            I like AWS serverless computing, React, GraphQL and ES Next.
+          </p>
+          <p class="mb-2 text-xl font-semibold leading-8 sm:text-xl">
+            Job status
+          </p>
+          <p class="mb-4 text-lg leading-8 sm:text-xl">
+            Searching, 100% Remote
+          </p>
 
-        <a
-          href="mailto:jpmti2016@gmail.com"
-          class="px-4 py-2 font-bold text-white bg-blue-500 rounded hover:bg-blue-700"
-          >Contact me</a
-        >
+          <a
+            href="mailto:jpmti2016@gmail.com"
+            class="px-4 py-2 font-bold text-white bg-blue-500 rounded hover:bg-blue-700"
+            >Contact me</a
+          >
+        </div>
       </div>
     </section>
 
-    <section id="about" class="bg-blue-400">
+    <section id="about" class="bg-gray-100">
       <div class="container">
-        <div class="flex flex-col mx-3 mt-5 sm:mt-7 sm:ml-20 sm:mr-2">
-          <h1 class="mb-2 sm:text-xl">
-            Hi, I'm a
+        <div class="flex flex-col mx-4 mt-6 sm:mt-7">
+          <h2 class="mb-3 text-2xl font-bold tracking-wide sm:text-5xl">
+            About
+          </h2>
+          <p class="mb-3 sm:text-xl">
+            I am a
             <span class="font-semibold">Computer Science Engineer (2009)</span>
-            turned to the <span class="font-semibold">JS universe</span>.
-          </h1>
-          <p class="mb-2 sm:text-lg">
-            I like AWS serverless computing, React, GraphQL and ES Next.
+            turned to the <span class="font-semibold">JS universe</span>. I know
+            SWE, testing, SQA and PM (Lead teams of 20-50 people).
           </p>
-          <p class="mb-2 sm:text-lg">
-            I Know SWE, testing, SQA and PM (Lead teams of 20-50 people).
+          <p class="mb-3 sm:text-lg">
+            I build secure and scalable cloud apps with AWS Amplify (and other
+            services), maintaining predictability and order in the process from
+            prototyping to deployment.
           </p>
 
-          <p class="mb-2 sm:text-lg">
+          <p class="mb-3 sm:text-lg">
             I care about UX/UI, SEO and performance but I have a lot grasp.
-            Currently learning from Refactoring UI book and Tailwind CSS.
-          </p>
-          <p class="mb-2 sm:text-lg">
-            I have also played with Bootstrap and Semantic UI.
+            Currently learning from Refactoring UI book and Tailwind CSS. I have
+            also played with Bootstrap and Semantic UI.
           </p>
 
-          <p class="mb-2 sm:text-lg">
+          <p class="mb-3 sm:text-lg">
             I use VS Code, Git/Github, Chrome Developer Tools and Amplify CLI
-            daily.
+            daily. I code on a Dell Inspiron 15 7000 Series (Ubuntu 20.04 LTS)
+            pluged to an external Dell UltraSharp 27 4K Monitor.
           </p>
-
-          <p class="mb-2 sm:text-lg">
+          <p class="mb-3 sm:text-lg">
             I speak English (continuosly improving) and Spanish (native).
           </p>
-
-          <p class="mb-2 sm:text-lg">
-            I code on a Dell Inspiron 15 7000 Series (Ubuntu 20.04 LTS) pluged
-            to an external Dell UltraSharp 27 4K Monitor.
+          <p class="mb-3 sm:text-lg">
+            When I am not coding I like to read. Recent readings:
           </p>
-
-          <p class="mb-2 sm:text-lg">
-            I have 9 lovely Bettas and a pasion for nature.
-          </p>
-
-          <p class="mb-8 sm:text-lg">
-            Reads:
+          <p class="mb-3 sm:text-lg">
             <span class="font-medium">The choice by Edith Eva Eger</span>
             [non-technical, completed],
             <span class="font-medium">Composing Software by Eric Elliot.</span>
@@ -175,40 +170,81 @@
             >
             [technical, pending].
           </p>
+
+          <p class="mb-3 sm:text-lg">
+            I have 9 lovely Bettas and a pasion for nature.
+          </p>
         </div>
       </div>
     </section>
 
-    <section id="projects" class="bg-gray-100">
-      <div class="container px-8 py-12 mx-auto lg:w-1/2 lg:py-24 lg:px-12">
-        <div class="flex">
-          <div class="max-w-md p-4 sm:max-w-xl lg:max-w-ful">
-            <div class="xl:max-w-lg xl:m-auto">
-              <h2
-                class="text-2xl font-bold leading-tight text-gray-800 mt- sm:text-4xl lg:text-3xl xl:text-4xl"
-              >
-                Money Tracker.
-                <br class="hidden md:inline" />
-                <span class="text-indigo-500"
-                  >Built with Amplify, React, GraphQL, Semantic UI</span
-                >
-              </h2>
-              <img
-                class="mt-4 rounded-lg shadow-xl sm:mt-8 sm:h-64 sm:w-full sm:object-cover sm:object-center lg:hidden"
-                src="img/02805BE5-8D74-4DEC-BDEE-DDDF02B3834E.jpeg"
-                alt="personal desktop"
-              />
-              <p class="mt-2 text-gray-600 sm:mt-8 sm:text-xl">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
-                eum omnis, doloremque quas commodi nisi libero sapiente
-                excepturi magnam eligendi quae veritatis alias voluptate aliquid
-                voluptates soluta provident ad quos obcaecati atque nemo
-                architecto error. Ad rem quo quia, excepturi eius ratione, ea
-                facilis pariatur recusandae itaque ut, eum facere.
-              </p>
-              <div class="mt-4 text-sm sm:mt-6 sm:text-base">
-                <a class="shadow-lg btn btn-indigo" href="#">Check Demo</a>
-                <a class="shadow-lg btn btn-gray" href="#">Learn more</a>
+    <section id="projects" class="bg-gray-200">
+      <div class="container">
+        <div class="mx-4 mt-6 sm:mt-7 sm:mx-auto">
+          <h2 class="mb-3 text-2xl font-bold tracking-wide sm:text-5xl">
+            Projects
+          </h2>
+          <div class="sm:flex">
+            <div class="flex flex-col items-left">
+              <div class="max-w-md py-2 sm:max-w-xl lg:max-w-ful">
+                <div class="xl:max-w-lg xl:m-auto">
+                  <h3
+                    class="text-xl font-bold leading-tight text-gray-800 mt- sm:text-4xl lg:text-3xl xl:text-4xl"
+                  >
+                    Money Tracker.
+                    <br class="hidden md:inline" />
+                    <span class="text-indigo-500"
+                      >Built with Amplify, React, GraphQL, Semantic UI</span
+                    >
+                  </h3>
+                  <img
+                    class="mt-4 rounded-lg shadow-xl sm:mt-8 sm:h-64 sm:w-full sm:object-cover sm:object-center lg:hidden"
+                    src="img/02805BE5-8D74-4DEC-BDEE-DDDF02B3834E.jpeg"
+                    alt="personal desktop"
+                  />
+                  <p class="mt-2 text-gray-600 sm:mt-8 sm:text-xl">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Tenetur eum omnis, doloremque quas commodi nisi libero
+                    sapiente excepturi magnam eligendi quae veritatis alias
+                    voluptate aliquid voluptates soluta provident ad quos
+                    obcaecati atque nemo architecto error. Ad rem quo quia,
+                    excepturi eius ratione, ea facilis pariatur recusandae
+                    itaque ut, eum facere.
+                  </p>
+                  <div class="mt-4 text-sm sm:mt-6 sm:text-base">
+                    <a class="shadow-lg btn btn-indigo" href="#">Check Demo</a>
+                    <a class="shadow-lg btn btn-gray" href="#">Learn more</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="flex flex-col items-left">
+              <div class="max-w-md py-2 sm:max-w-xl lg:max-w-ful">
+                <div class="xl:max-w-lg xl:m-auto">
+                  <h3
+                    class="text-xl font-bold leading-tight text-gray-800 mt- sm:text-4xl lg:text-3xl xl:text-4xl"
+                  >
+                    Nature at your feet.
+                    <br class="hidden md:inline" />
+                    <span class="text-indigo-500"
+                      >Built with Taildwind CSS, Amplify and CSS grid.</span
+                    >
+                  </h3>
+                  <img
+                    class="mt-4 rounded-lg shadow-xl sm:mt-8 sm:h-64 sm:w-full sm:object-cover sm:object-center lg:hidden"
+                    src="img/59E2ECE3-CAB8-4967-A1EC-2DCDCD7A855D.jpeg"
+                    alt="personal desktop"
+                  />
+                  <p class="mt-2 text-gray-600 sm:mt-8 sm:text-xl">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Assumenda quod culpa, quisquam repellat reprehenderit
+                    deserunt facilis sint dolore maiores nostrum!
+                  </p>
+                  <div class="mt-4 text-sm sm:mt-6 sm:text-base">
+                    <a class="shadow-lg btn btn-indigo" href="#">Check Demo</a>
+                    <a class="shadow-lg btn btn-gray" href="#">Learn more</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -219,9 +255,9 @@
     <footer class="sm:static">
       <div class="container">
         <div
-          class="flex flex-col items-center content-center justify-center h-20 text-xl social"
+          class="flex flex-col items-center content-center justify-center py-4 text-xl social"
         >
-          <div class="flex text-xl social-list">
+          <div class="flex mb-3 text-xl social-list">
             <a
               class="block px-1 mt-1 rounded-full hover:bg-gray-200"
               href="https://twitter.com/jpmti2016"
@@ -246,6 +282,7 @@
             ></a>
           </div>
           <p class="text-base">Created by Yampier Medina</p>
+          <p class="text-base">© 2020 MIT licence</p>
         </div>
       </div>
     </footer>
