Create a grid to the projects

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <section id="about" class="bg-gray-100">
       <div class="container">
         <div class="flex flex-col mx-4 mt-6 sm:mt-7">
-          <h2 class="mb-3 text-2xl font-bold tracking-wide sm:text-5xl">
+          <h2 class="mb-3 text-2xl font-bold tracking-wide sm:text-3xl">
             About
           </h2>
           <p class="mb-3 sm:text-xl">
@@ -180,71 +180,62 @@
 
     <section id="projects" class="bg-gray-200">
       <div class="container">
-        <div class="mx-4 mt-6 sm:mt-7 sm:mx-auto">
-          <h2 class="mb-3 text-2xl font-bold tracking-wide sm:text-5xl">
+        <div class="mx-4 mt-6 sm:mt-7">
+          <h2 class="mb-3 text-2xl font-bold tracking-wide sm:text-3xl">
             Projects
           </h2>
-          <div class="sm:flex">
-            <div class="flex flex-col items-left">
-              <div class="max-w-md py-2 sm:max-w-xl lg:max-w-ful">
-                <div class="xl:max-w-lg xl:m-auto">
-                  <h3
-                    class="text-xl font-bold leading-tight text-gray-800 mt- sm:text-4xl lg:text-3xl xl:text-4xl"
+          <div class="sm:grid sm:grid-cols-2 sm:gap-8">
+            <div class="flex flex-col pb-10 sm:pb-12">
+              <div>
+                <h3 class="text-xl font-bold leading-tight text-gray-800">
+                  Money Tracker.
+                  <br class="hidden md:inline" />
+                  <span class="text-indigo-500"
+                    >Built with Amplify, React, GraphQL, Semantic UI</span
                   >
-                    Money Tracker.
-                    <br class="hidden md:inline" />
-                    <span class="text-indigo-500"
-                      >Built with Amplify, React, GraphQL, Semantic UI</span
-                    >
-                  </h3>
-                  <img
-                    class="mt-4 rounded-lg shadow-xl sm:mt-8 sm:h-64 sm:w-full sm:object-cover sm:object-center lg:hidden"
-                    src="img/02805BE5-8D74-4DEC-BDEE-DDDF02B3834E.jpeg"
-                    alt="personal desktop"
-                  />
-                  <p class="mt-2 text-gray-600 sm:mt-8 sm:text-xl">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Tenetur eum omnis, doloremque quas commodi nisi libero
-                    sapiente excepturi magnam eligendi quae veritatis alias
-                    voluptate aliquid voluptates soluta provident ad quos
-                    obcaecati atque nemo architecto error. Ad rem quo quia,
-                    excepturi eius ratione, ea facilis pariatur recusandae
-                    itaque ut, eum facere.
-                  </p>
-                  <div class="mt-4 text-sm sm:mt-6 sm:text-base">
-                    <a class="shadow-lg btn btn-indigo" href="#">Check Demo</a>
-                    <a class="shadow-lg btn btn-gray" href="#">Learn more</a>
-                  </div>
-                </div>
+                </h3>
+                <img
+                  class="mt-4 rounded-lg shadow-xl sm:mt-8 sm:h-64 sm:w-full sm:object-cover sm:object-center"
+                  src="img/02805BE5-8D74-4DEC-BDEE-DDDF02B3834E.jpeg"
+                  alt="personal desktop"
+                />
+              </div>
+              <p class="mt-2 text-lg text-gray-600 sm:mt-8">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+                eum omnis, doloremque quas commodi nisi libero sapiente
+                excepturi magnam eligendi quae veritatis alias voluptate aliquid
+                voluptates soluta provident ad quos obcaecati atque nemo
+                architecto error. Ad rem quo quia, excepturi eius ratione, ea
+                facilis pariatur recusandae itaque ut, eum facere.
+              </p>
+              <div class="mt-4 text-sm sm:mt-6 sm:text-base">
+                <a class="shadow-lg btn btn-indigo" href="#">Check Demo</a>
+                <a class="shadow-lg btn btn-gray" href="#">Learn more</a>
               </div>
             </div>
-            <div class="flex flex-col items-left">
-              <div class="max-w-md py-2 sm:max-w-xl lg:max-w-ful">
-                <div class="xl:max-w-lg xl:m-auto">
-                  <h3
-                    class="text-xl font-bold leading-tight text-gray-800 mt- sm:text-4xl lg:text-3xl xl:text-4xl"
+            <div class="flex flex-col">
+              <div>
+                <h3 class="text-xl font-bold leading-tight text-gray-800">
+                  Nature at your feet.
+                  <br class="hidden md:inline" />
+                  <span class="text-indigo-500"
+                    >Built with Taildwind CSS, Amplify and CSS grid</span
                   >
-                    Nature at your feet.
-                    <br class="hidden md:inline" />
-                    <span class="text-indigo-500"
-                      >Built with Taildwind CSS, Amplify and CSS grid.</span
-                    >
-                  </h3>
-                  <img
-                    class="mt-4 rounded-lg shadow-xl sm:mt-8 sm:h-64 sm:w-full sm:object-cover sm:object-center lg:hidden"
-                    src="img/59E2ECE3-CAB8-4967-A1EC-2DCDCD7A855D.jpeg"
-                    alt="personal desktop"
-                  />
-                  <p class="mt-2 text-gray-600 sm:mt-8 sm:text-xl">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Assumenda quod culpa, quisquam repellat reprehenderit
-                    deserunt facilis sint dolore maiores nostrum!
-                  </p>
-                  <div class="mt-4 text-sm sm:mt-6 sm:text-base">
-                    <a class="shadow-lg btn btn-indigo" href="#">Check Demo</a>
-                    <a class="shadow-lg btn btn-gray" href="#">Learn more</a>
-                  </div>
-                </div>
+                </h3>
+                <img
+                  class="mt-4 rounded-lg shadow-xl sm:mt-8 sm:h-64 sm:w-full sm:object-cover sm:object-center"
+                  src="img/59E2ECE3-CAB8-4967-A1EC-2DCDCD7A855D.jpeg"
+                  alt="personal desktop"
+                />
+              </div>
+              <p class="mt-2 text-lg text-gray-600 sm:mt-8">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Assumenda quod culpa, quisquam repellat reprehenderit deserunt
+                facilis sint dolore maiores nostrum!
+              </p>
+              <div class="mt-4 text-sm sm:mt-6 sm:text-base">
+                <a class="shadow-lg btn btn-indigo" href="#">Check Demo</a>
+                <a class="shadow-lg btn btn-gray" href="#">Learn more</a>
               </div>
             </div>
           </div>
