--- a/index.html
+++ b/index.html
@@ -190,8 +190,25 @@
                 <h3 class="text-xl font-bold leading-tight text-gray-800">
                   Money Tracker.
                   <br class="hidden md:inline" />
-                  <span class="text-indigo-500"
-                    >Built with Amplify, React, GraphQL, Semantic UI</span
+                  <span
+                    class="inline-block px-2 mb-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full"
+                    >Amplify</span
+                  >
+                  <span
+                    class="inline-block px-2 mb-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full"
+                    >React</span
+                  >
+                  <span
+                    class="inline-block px-2 mb-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full"
+                    >GraphQL</span
+                  >
+                  <span
+                    class="inline-block px-2 mb-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full"
+                    >Semantic UI</span
+                  >
+                  <span
+                    class="inline-block px-2 mb-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full"
+                    >Font awesome</span
                   >
                 </h3>
                 <img
@@ -203,10 +220,7 @@
               <p class="mt-2 text-lg text-gray-600 sm:mt-8">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
                 eum omnis, doloremque quas commodi nisi libero sapiente
-                excepturi magnam eligendi quae veritatis alias voluptate aliquid
-                voluptates soluta provident ad quos obcaecati atque nemo
-                architecto error. Ad rem quo quia, excepturi eius ratione, ea
-                facilis pariatur recusandae itaque ut, eum facere.
+                excepturi magnam eligendi quae veritatis alias voluptate.
               </p>
               <div class="mt-4 text-sm sm:mt-6 sm:text-base">
                 <a class="shadow-lg btn btn-indigo" href="#">Check Demo</a>
@@ -218,8 +232,33 @@
                 <h3 class="text-xl font-bold leading-tight text-gray-800">
                   Nature at your feet.
                   <br class="hidden md:inline" />
-                  <span class="text-indigo-500"
-                    >Built with Taildwind CSS, Amplify and CSS grid</span
+                  <span
+                    class="inline-block px-2 mb-1 text-xs text-white bg-indigo-600 rounded-full"
+                    >Taildwind CSS</span
+                  >
+                  <span
+                    class="inline-block px-2 mb-1 text-xs text-white bg-indigo-600 rounded-full"
+                    >Amplify</span
+                  >
+                  <span
+                    class="inline-block px-2 mb-1 text-xs text-white bg-indigo-600 rounded-full"
+                    >CSS</span
+                  >
+                  <span
+                    class="inline-block px-2 mb-1 text-xs text-white bg-indigo-600 rounded-full"
+                    >CSS Grid</span
+                  >
+                  <span
+                    class="inline-block px-2 mb-1 text-xs text-white bg-indigo-600 rounded-full"
+                    >Flexbox</span
+                  >
+                  <span
+                    class="inline-block px-2 mb-1 text-xs text-white bg-indigo-600 rounded-full"
+                    >HTML5</span
+                  >
+                  <span
+                    class="inline-block px-2 mb-1 text-xs text-white bg-indigo-600 rounded-full"
+                    >PostCSS</span
                   >
                 </h3>
                 <img
@@ -243,12 +282,12 @@
       </div>
     </section>
 
-    <footer class="sm:static">
+    <footer id="contact" class="">
       <div class="container">
         <div
           class="flex flex-col items-center content-center justify-center py-4 text-xl social"
         >
-          <div class="flex mb-3 text-xl social-list">
+          <div class="flex mb-3 text-2xl social-list">
             <a
               class="block px-1 mt-1 rounded-full hover:bg-gray-200"
               href="https://twitter.com/jpmti2016"
