Test the badge with different sizes

--- a/index.html
+++ b/index.html
@@ -190,16 +190,18 @@
                 <h3 class="text-xl font-bold leading-tight text-gray-800">
                   Money Tracker.
                   <br class="hidden md:inline" />
+                </h3>
+                <p>
                   <span
-                    class="inline-block px-2 mb-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full"
+                    class="inline-block px-2 mb-1 text-xs tracking-wide text-white uppercase bg-indigo-600 rounded-full"
                     >Amplify</span
                   >
                   <span
-                    class="inline-block px-2 mb-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full"
+                    class="inline-block px-2 mb-1 text-xs tracking-wide text-white uppercase bg-indigo-600 rounded-full"
                     >React</span
                   >
                   <span
-                    class="inline-block px-2 mb-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full"
+                    class="inline-block px-2 mb-1 text-xs text-white uppercase bg-indigo-600 rounded-full"
                     >GraphQL</span
                   >
                   <span
@@ -210,7 +212,7 @@
                     class="inline-block px-2 mb-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full"
                     >Font awesome</span
                   >
-                </h3>
+                </p>
                 <img
                   class="mt-4 rounded-lg shadow-xl sm:mt-8 sm:h-64 sm:w-full sm:object-cover sm:object-center"
                   src="img/02805BE5-8D74-4DEC-BDEE-DDDF02B3834E.jpeg"
@@ -231,7 +233,8 @@
               <div>
                 <h3 class="text-xl font-bold leading-tight text-gray-800">
                   Nature at your feet.
-                  <br class="hidden md:inline" />
+                </h3>
+                <p>
                   <span
                     class="inline-block px-2 mb-1 text-xs text-white bg-indigo-600 rounded-full"
                     >Taildwind CSS</span
@@ -260,7 +263,7 @@
                     class="inline-block px-2 mb-1 text-xs text-white bg-indigo-600 rounded-full"
                     >PostCSS</span
                   >
-                </h3>
+                </p>
                 <img
                   class="mt-4 rounded-lg shadow-xl sm:mt-8 sm:h-64 sm:w-full sm:object-cover sm:object-center"
                   src="img/59E2ECE3-CAB8-4967-A1EC-2DCDCD7A855D.jpeg"
