--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <noscript>This site runs best with JavaScript enabled.</noscript>
 
     <header
-      class="sticky top-0 px-4 mx-auto text-gray-500 bg-white sm:flex sm:items-center sm:justify-between"
+      class="sticky top-0 px-4 mx-auto text-gray-500 bg-white sm:flex sm:items-center sm:justify-between sm:px-12"
     >
       <div class="flex items-center justify-between py-5 text-base lg:py-14">
         <div class="flex items-center">
@@ -166,7 +166,7 @@
             <span class="font-medium">Fluent Forever by Gabriel Wyner</span>
             [non-technical, in progress] and
             <span class="font-medium"
-              >The Stratup Owbers's Manual by Steve Blank & Bob Dorf</span
+              >The Stratup Owners's Manual by Steve Blank & Bob Dorf</span
             >
             [technical, pending].
           </p>
@@ -185,88 +185,93 @@
             Projects
           </h2>
           <div class="sm:grid sm:grid-cols-2 sm:gap-8">
-            <div class="flex flex-col pb-10 sm:pb-12">
+            <div class="flex flex-col p-2 bg-white sm:p-4">
               <div>
-                <h3 class="text-xl font-bold leading-tight text-gray-800">
+                <h3 class="mb-1 text-xl font-bold leading-tight text-gray-800">
                   Money Tracker.
-                  <br class="hidden md:inline" />
                 </h3>
-                <p>
+                <p class="inline-block">
                   <span
-                    class="inline-block px-2 mb-1 text-xs tracking-wide text-white uppercase bg-indigo-600 rounded-full"
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full sm:mb-1"
                     >Amplify</span
                   >
                   <span
-                    class="inline-block px-2 mb-1 text-xs tracking-wide text-white uppercase bg-indigo-600 rounded-full"
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full sm:mb-1"
+                    >Semantic UI</span
+                  >
+
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full sm:mb-1"
                     >React</span
                   >
                   <span
-                    class="inline-block px-2 mb-1 text-xs text-white uppercase bg-indigo-600 rounded-full"
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full sm:mb-1"
                     >GraphQL</span
-                  >
-                  <span
-                    class="inline-block px-2 mb-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full"
-                    >Semantic UI</span
-                  >
-                  <span
-                    class="inline-block px-2 mb-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full"
-                    >Font awesome</span
                   >
                 </p>
                 <img
-                  class="mt-4 rounded-lg shadow-xl sm:mt-8 sm:h-64 sm:w-full sm:object-cover sm:object-center"
-                  src="img/02805BE5-8D74-4DEC-BDEE-DDDF02B3834E.jpeg"
+                  class="mt-3 rounded-lg shadow-xl sm:mt-4 sm:w-full sm:object-cover sm:object-center"
+                  src="img/trackingmyfinance.png"
                   alt="personal desktop"
                 />
               </div>
               <p class="mt-2 text-lg text-gray-600 sm:mt-8">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
-                eum omnis, doloremque quas commodi nisi libero sapiente
-                excepturi magnam eligendi quae veritatis alias voluptate.
+                Keeping records of our expenses is a hard work. Also our
+                receips, for everything, are in a continous treatening by the
+                amount of space that they need and the probability of lossing
+                them.
+              </p>
+              <p class="mt-2 text-lg text-gray-600">
+                But event worse how to
+                <span class="font-semibold">detect trends</span> in our buying
+                habits or how to know the
+                <span class="font-semibold"
+                  >size of your budget still alive</span
+                >?
+              </p>
+              <p class="mt-2 text-lg text-gray-600">
+                Try the app, create a new user or use user: test password:
+                test2020
               </p>
               <div class="mt-4 text-sm sm:mt-6 sm:text-base">
-                <a class="shadow-lg btn btn-indigo" href="#">Check Demo</a>
-                <a class="shadow-lg btn btn-gray" href="#">Learn more</a>
+                <a
+                  class="shadow-lg btn btn-indigo"
+                  href="https://www.trackingmyfinance.com"
+                  >Demo</a
+                >
+                <a class="shadow-lg btn btn-gray" href="#">Code</a>
               </div>
             </div>
-            <div class="flex flex-col">
+            <div class="flex flex-col p-2 bg-white sm:p-4">
               <div>
-                <h3 class="text-xl font-bold leading-tight text-gray-800">
+                <h3 class="mb-1 text-xl font-bold leading-tight text-gray-800">
                   Nature at your feet.
                 </h3>
-                <p>
+                <p class="inline-block">
                   <span
-                    class="inline-block px-2 mb-1 text-xs text-white bg-indigo-600 rounded-full"
-                    >Taildwind CSS</span
-                  >
-                  <span
-                    class="inline-block px-2 mb-1 text-xs text-white bg-indigo-600 rounded-full"
-                    >Amplify</span
-                  >
-                  <span
-                    class="inline-block px-2 mb-1 text-xs text-white bg-indigo-600 rounded-full"
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full sm:mb-1"
                     >CSS</span
                   >
                   <span
-                    class="inline-block px-2 mb-1 text-xs text-white bg-indigo-600 rounded-full"
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full sm:mb-1"
                     >CSS Grid</span
                   >
                   <span
-                    class="inline-block px-2 mb-1 text-xs text-white bg-indigo-600 rounded-full"
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full sm:mb-1"
                     >Flexbox</span
                   >
                   <span
-                    class="inline-block px-2 mb-1 text-xs text-white bg-indigo-600 rounded-full"
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full sm:mb-1"
                     >HTML5</span
                   >
                   <span
-                    class="inline-block px-2 mb-1 text-xs text-white bg-indigo-600 rounded-full"
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full sm:mb-1"
                     >PostCSS</span
                   >
                 </p>
                 <img
-                  class="mt-4 rounded-lg shadow-xl sm:mt-8 sm:h-64 sm:w-full sm:object-cover sm:object-center"
-                  src="img/59E2ECE3-CAB8-4967-A1EC-2DCDCD7A855D.jpeg"
+                  class="mt-3 rounded-lg shadow-xl sm:mt-4 sm:w-full sm:object-cover sm:object-center"
+                  src="img/natureatyourfeet.png"
                   alt="personal desktop"
                 />
               </div>
@@ -275,9 +280,17 @@
                 Assumenda quod culpa, quisquam repellat reprehenderit deserunt
                 facilis sint dolore maiores nostrum!
               </p>
+              <p class="mt-2 text-lg text-gray-600">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Obcaecati, dolorum?
+              </p>
+              <p class="mt-2 text-lg text-gray-600">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Temporibus, eum?
+              </p>
               <div class="mt-4 text-sm sm:mt-6 sm:text-base">
-                <a class="shadow-lg btn btn-indigo" href="#">Check Demo</a>
-                <a class="shadow-lg btn btn-gray" href="#">Learn more</a>
+                <a class="shadow-lg btn btn-indigo" href="#">Demo</a>
+                <a class="shadow-lg btn btn-gray" href="#">Code</a>
               </div>
             </div>
           </div>
@@ -290,7 +303,7 @@
         <div
           class="flex flex-col items-center content-center justify-center py-4 text-xl social"
         >
-          <div class="flex mb-3 text-2xl social-list">
+          <div class="flex mb-3 text-2xl sm:text-3xl social-list">
             <a
               class="block px-1 mt-1 rounded-full hover:bg-gray-200"
               href="https://twitter.com/jpmti2016"
